--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -66,7 +66,7 @@ note ={\url{http://www.biomedcentral.com/1471-2458/13/808}}
 }
 
 @Book{OOAD,
-  author =       {Lars Mathiassen m.f.},
+  author =       {Lars Mathiassen and Andreas Munk-Madsen and Peter Axel Nielsen and Jan Stage},
   title =        {Objekt Orienteret Analyse \& Design},
   publisher =    {Marko ApS},
   year =         {2001},
@@ -88,7 +88,7 @@ note ={\url{http://www.biomedcentral.com/1471-2458/13/808}}
 }
 
 @Book{DatabaseKilde,
-  author =       {Abraham Silberschatz m.f.},
+  author =       {Abraham Silberschatz and Henry F. Korth and S. Sudarshan},
   title =        {Database System Concepts},
   publisher =    {McGraw-Hill},
   year =         {2011},
@@ -154,7 +154,7 @@ note ={\url{http://www.raspberrypi.org/}}
 
 
 @Book{rfidAndNfc,
-  author =       {C. Patauner, H. Witschnig, D. Rinner, A. Maier, E. Merlin, E. Leitgeb},
+  author =       {C. Patauner and H. Witschnig and D. Rinner and A. Maier and E. Merlin and E. Leitgeb},
   title =        {High Speed RFID/NFC at the Frequency of 13.56 MHz},
   publisher =    {Graz University of Technology},
   year =         {2007},
