--- a/report/text/requirementsOfMom.tex
+++ b/report/text/requirementsOfMom.tex
@@ -21,7 +21,7 @@ In the following sections the specification of the website, controller and tag, 
 A Media-Online Management (MOM) owner needs a way to manage the system and for this a website will be made. There are several requirements for this website:
 
 \begin{itemize}
-	\item Register a new MOM together with a user profile which is a manager of this system\fixme{Not for the user}
+%	\item Register a new MOM together with a user profile which is a manager of this system\fixme{Not for the user}
 	\item Make it possible to add, edit and delete user profiles in an existing MOM 
 	\item Make it possible to add, edit and delete Controllers from an existing MOM
 	\item There should be a way to add, edit and delete Tags to the system. Also a tag should be connected to a user profile
