--- a/report/text/database.tex
+++ b/report/text/database.tex
@@ -12,7 +12,7 @@ In the parent control system there are seven essential objects; control system, 
 	\item[Tag] identifies the physical tag that a profile uses to activate the controllers. A tag is identified by the serial number of the physical tag.
 	\item[Controller]	is an object representation of the physical controller and like the tag it is identified by the serial number of the physical controller.
 	\item[Chore] is a representation of a house chore which can be carried out by a child (profile) which then gets points as a reward.
-	\item[Permission] is representing time restrictions on the controllers which some of the profiles need to abide by. \fixme{Does this still fit?}
+	\item[Permission] is representing restrictions on a controller which some of the profiles need to abide by. 
 	\item[Rule] is representing other restrictions or rules that cannot be expressed by the permission. A rule consist of some conditions that need to be meet before some actions should be taken as explained previously in section \vref{sec:rule}. 
 \end{description}
 
