--- a/report/text/newAnalysis.tex
+++ b/report/text/newAnalysis.tex
@@ -4,7 +4,7 @@ Research also shows that this increase in media usage have consequences for the 
 \\
 In this report we give a suggestion towards a solution to control this problem, by expanding on the concept of Parental Control over electronic devices.
 
-\section{Terms}
+\section{Terminology}
 In this section keywords are explained, in order to easier understand the report.\\
 \\
 \textbf{Smart Home} can refer to multiple forms of improvement on a home. Most commonly is: home automation, environment friendly improvements and power saving improvements. In this report we will only regard Smart Home in relation to home automation.\\
