--- a/report/text/newAnalysis.tex
+++ b/report/text/newAnalysis.tex
@@ -44,7 +44,7 @@ After having figured out what the key features of the system should be, we start
 The 1st and 2nd feature is best maintained from a website with a graphical interface. This is due to the complexity of the idea and the realization that simplifying permissions and rules into something a machine would understand is a hard task and an even harder one for non-computer graduate, more information on how we implemented rules can be read in section \vref{sec:rule}.\\
 Among other solutions could have been a desktop- or phone application.\\
 \\
-The 3rd feature has a few different solutions. One solution was to write code for a bunch of media, that then would be able to work directly with the administration web-site, but this would force us to write code for every media device from every fabricator.\\
+The 3rd feature has a few different solutions. One solution is to write code for a bunch of media, that then would be able to work directly with the administration web-site, but this would force us to write code for every media device from every fabricator.\\
 A better alternative is to create a device that can turn the power on and off for a media instead. We are aware that this solution might influence some media in a bad way, but most media today is setup to handle a sudden disappearance of electrical power.\\
 More about the chosen device can be found in chapter \vref{chap:hardware}.\\
 \\
