--- a/report/text/websiteImplementationAndDesign.tex
+++ b/report/text/websiteImplementationAndDesign.tex
@@ -1,4 +1,4 @@
-\chapter{Admin Web Interface}
+\chapter{Admin Web Interface} \fixme{mention somewhere that dashbaord, calendar and graf has static data}
 \label{chap:website}
 This chapter goes into details about the design and implementation of the website used to administrate Media-Online Management (MOM).
 
