warnings be gone

--- a/report/text/test.tex
+++ b/report/text/test.tex
@@ -47,7 +47,8 @@ Before the test is conducted some test cases should be made by the development t
 
 
 We want to primarily be validated on....
-(- choose the Heuristics which it should be evaluated against,(Visibility, Consistency, Control, Feedback, Familiarity is lisbeths suggestion) ) \fixme{TODO }
+(- choose the Heuristics which it should be evaluated against,
+(Visibility, Consistency, Control, Feedback, Familiarity is lisbeths suggestion) ) \fixme{TODO }
 
 
 \subsection{Presenting the Results}
@@ -90,8 +91,6 @@ In table \ref{tab:testcase} is one of the test cases that we made for testing th
 			\item Perform Test AT001A from appendix \vref{appen:testSuite} on both profiles with addendum: Wait 3 minutes for both users and note if either expends points.
 		\end{enumerate}}
 		\\		
-		\hline
-		Result of Test: & \\
 		\hline
 		\end{tabular*}
 \end{table}
