--- a/report/text/api.tex
+++ b/report/text/api.tex
@@ -51,7 +51,7 @@ error & A description of the error that has occurred if any has, error is omitte
 \hline
 timeRemaining & The amount of time before the controller should turn itself off in minutes \\
 \hline
-timeSpent & The amount of time the controller was one in minutes \\
+timeSpent & The amount of time the controller was on in minutes \\
 \hline
 pointsRemoved & The amount of points removed from the user \\
 \hline
