--- a/report/draft.tex
+++ b/report/draft.tex
@@ -29,7 +29,7 @@
 	%\part{Design}
 	
 	% Part Analysis
-	\part{Analysis}
+	\part{Introduction}
 	\input{text/newAnalysis.tex}
 	%\input{text/analysis_projectFocus.tex} - old
 	%\input{text/targetgroup.tex} - old
@@ -60,7 +60,7 @@
 
 	%Part Perspective
 	
-	\part{Perspective}
+	\part{Reflection}
 	\input{text/conclusion.tex}
 	\input{text/futureWork.tex}
 	
