--- a/report/text/systemOverviewDesign.tex
+++ b/report/text/systemOverviewDesign.tex
@@ -1,4 +1,4 @@
-\chapter{Overall System Design}
+\chapter{System Analysis}
 In this chapter the challenges from the problem statement are looked upon, and an overview of what will be needed to overcome these challenges, will be formulated.
 
 %In this chapter we present the overall design of Media-Online Management(MOM). First we will present how we intend the users to use MOM. Then general concepts will be introduced which is an essential part of the system and will be mentioned several times hereafter. Thirdly the requirements of MOM will be explained in more detail. Finally the system architecture will be presented.    
