Kommentar på Flowchart i Arduino afsnit.

--- a/report/text/usingCode.tex
+++ b/report/text/usingCode.tex
@@ -1,4 +1,5 @@
 \subsection{Programming Basics for Arduino}
+\label{ProgrammingBasicsforArduino}
 
 An Arduino code file is referred to as a Sketch. At its very core the Arduino sketch has two components, \verb|setup()| and \verb|loop()|, which are filled by the programmer to apply functionality.
 The \verb|setup()| method is called on start up only to initialize the Single-board micro-controller, while the \verb|loop()| method runs repeatedly, making the Arduino perform its designated task.
