--- a/report/text/systemOverviewDesign.tex
+++ b/report/text/systemOverviewDesign.tex
@@ -9,7 +9,7 @@ In order to know what hardware was needed, a design of the overall solution and 
 
 \subsection{Identify Unique Users}
 %How do we identify unique users in a subtle and child friendly way.
-The first challenge in the problem statement was: ''How do we identify unique users in a subtle and child friendly way.''.\\
+The first challenge in the problem statement was: ``How do we identify unique users in a subtle and child friendly way.''\\
 As mentioned in the analysis there are several different ways to do this, including fingerprints and NFC tags. Common for them all is that they require some sort of scanning device to be used. For the choice of hardware see chapter \ref{chap:hardware}.\\
 In order to verify that the user is actually a user on this families system this scanner must have a way to contact some sort of database or an overview of members. Which leads us to the next challenge.
 
